[gd_scene load_steps=2 format=3 uid="uid://dkcgfr4epw6g5"]

[ext_resource type="Script" path="res://Scenes/ScoreScreen.gd" id="1_cstsw"]

[node name="ScoreScreen" type="Node2D"]
script = ExtResource("1_cstsw")

[node name="ScoreTitleLabel" type="RichTextLabel" parent="."]
offset_left = 180.0
offset_top = 224.0
offset_right = 358.0
offset_bottom = 300.0
theme_override_font_sizes/normal_font_size = 50
text = "SCORE:"

[node name="LevelCompleteLabel" type="RichTextLabel" parent="."]
offset_left = 754.0
offset_top = 4.0
offset_right = 1198.0
offset_bottom = 80.0
theme_override_font_sizes/normal_font_size = 50
text = "LEVEL COMPLETE!"

[node name="RankTitleLabel" type="RichTextLabel" parent="."]
offset_left = 182.0
offset_top = 464.0
offset_right = 346.0
offset_bottom = 572.0
theme_override_font_sizes/normal_font_size = 50
text = "RANK: "

[node name="AccuracyTitleLabe" type="RichTextLabel" parent="."]
offset_left = 178.0
offset_top = 692.0
offset_right = 484.0
offset_bottom = 800.0
theme_override_font_sizes/normal_font_size = 50
text = "ACCURACY:"

[node name="ScoreDisplayLabel" type="RichTextLabel" parent="."]
offset_left = 410.0
offset_top = 222.0
offset_right = 1014.0
offset_bottom = 298.0
theme_override_font_sizes/normal_font_size = 50

[node name="RankDisplayLabel" type="RichTextLabel" parent="."]
offset_left = 376.0
offset_top = 458.0
offset_right = 980.0
offset_bottom = 534.0
theme_override_font_sizes/normal_font_size = 50

[node name="AccuracyDisplayLabel" type="RichTextLabel" parent="."]
offset_left = 480.0
offset_top = 692.0
offset_right = 1084.0
offset_bottom = 768.0
theme_override_font_sizes/normal_font_size = 50

[node name="ReplayLevelButton" type="Button" parent="."]
offset_left = 358.0
offset_top = 876.0
offset_right = 838.0
offset_bottom = 982.0
theme_override_font_sizes/font_size = 50
text = "Replay Level"

[node name="MainMenuButton" type="Button" parent="."]
offset_left = 1124.0
offset_top = 876.0
offset_right = 1604.0
offset_bottom = 982.0
theme_override_font_sizes/font_size = 50
text = "Main Menu"

[connection signal="pressed" from="ReplayLevelButton" to="." method="_on_replay_level_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
